fixed dist task

--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,7 @@ task distZip(type: Zip) {
 		}
 		from (rootDir)
 		{
-			include 'doc/**/*', 'ebc4j/**/*', 'ebc4j-async/**/*', 'lib-test/**/*'
+			include 'doc/**/*', 'ebc4j/**/*', 'ebc4j-async/**/*', 'lib/**/*'
 			exclude '*/**/build', '*/**/generated'
 		}
 		from (files (subprojects.collect { project -> project.jar.destinationDir }))
