--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,19 @@ allprojects {
 subprojects {
 	apply plugin: 'java'
 	
+	repositories {
+	    flatDir {
+	        dirs '../lib'
+	    }
+		mavenCentral()
+	}
+	
 	dependencies {
-	    compile fileTree(dir: '../lib/main', include: '**/*.jar')
-		testCompile fileTree(dir: '../lib/test', include: '**/*.jar')
+	    compile 'events4j:events4j:1.2.1'
+		testCompile 'org.hamcrest:hamcrest-core:1.3'
+		testCompile 'org.hamcrest:hamcrest-library:1.3'
+		testCompile 'junit:junit:4.11'
+		testCompile 'org.mockito:mockito-all:1.9.5'
 	}
 	
 	jar	{
