--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 apply plugin: 'base'
 
 allprojects {
-	version = '1.2'
+	version = '1.3.0'
 	ext.title = 'EBC4J API'
 	ext.vendor = 'object-zoo - Tilmann Kuhn'
 	ext.copy = '2010 - 2014'
-	ext.javadoc = 'http://java.sun.com/javase/6/docs/api/'
+	ext.javadoc = 'http://docs.oracle.com/javase/8/docs/api/'
 	ext.encoding = 'UTF-8'
 }
 
 subprojects {
 	apply plugin: 'java'
+	sourceCompatibility = 8
+    targetCompatibility = 8
 	
 	repositories {
 	    flatDir {
@@ -20,7 +22,7 @@ subprojects {
 	}
 	
 	dependencies {
-	    compile 'events4j:events4j:1.2.1'
+	    compile 'events4j:events4j:1.3+'
 		testCompile 'org.hamcrest:hamcrest-core:1.3'
 		testCompile 'org.hamcrest:hamcrest-library:1.3'
 		testCompile 'junit:junit:4.11'
