--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,28 @@
 apply plugin: 'base'
 
 allprojects {
+	group = 'net.object-zoo.ebc4j'
 	version = '1.3.0'
 	ext.title = 'EBC4J API'
 	ext.vendor = 'object-zoo - Tilmann Kuhn'
-	ext.javadoc = 'http://docs.oracle.com/javase/8/docs/api/'
+	ext.javadocUrl = 'http://docs.oracle.com/javase/8/docs/api/'
 	ext.encoding = 'UTF-8'
 }
 
 subprojects {
 	apply plugin: 'java'
+	apply plugin: 'maven'
+
 	sourceCompatibility = 8
     targetCompatibility = 8
 	
 	repositories {
-	    flatDir {
-	        dirs '../lib'
-	    }
 		mavenCentral()
+		maven { url 'https://jitpack.io' }
 	}
 	
 	dependencies {
-	    compile 'events4j:events4j:1.3+'
+		compile 'net.object-zoo.events4j:events4j:1.3.0'
 		testCompile 'org.hamcrest:hamcrest-core:1.3'
 		testCompile 'org.hamcrest:hamcrest-library:1.3'
 		testCompile 'junit:junit:4.13'
@@ -33,24 +34,26 @@ subprojects {
 			attributes("Implementation-Title": project.title, "Implementation-Version": project.version, "Implementation-Vendor": project.vendor)
 		}
 	}
-	
-	task updateTestResultTimestamps {
-		dependsOn test
-		inputs.files test.outputs.files
-		doLast {
-			def timestamp = System.currentTimeMillis()
-			test.testResultsDir.eachFile { it.lastModified = timestamp }
-			test.testReportDir.eachFile { it.lastModified = timestamp }
-		}
-    }
-	
-	task jenkinsBuild {
-		dependsOn updateTestResultTimestamps
+
+	task sourcesJar(type: Jar, dependsOn: classes) {
+		archiveClassifier = 'sources'
+		from sourceSets.main.allSource
+	}
+
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+		archiveClassifier = 'javadoc'
+		from javadoc
+	}
+
+	artifacts {
+		archives sourcesJar
+		archives javadocJar
 	}
 }
 
 project(':ebc4j') {
 	jar	{
+		// include source files in jar for GWT support
 		from sourceSets.main.allJava
 	}
 }
@@ -100,7 +103,7 @@ allprojects {
 			setVersion(true) 
 			setNoTimestamp(true)
 			encoding project.encoding
-			links project.javadoc
+			links project.javadocUrl
 			docTitle "<h1>${project.title} ${project.version}</h1>"
 			windowTitle "${project.title} ${project.version}"
 		}
